# taishanglaojun

./: .env.example  .gitignore  .gitlab-ci.yml  .markdownlint.json  Makefile  README.md  add-correct-test-data.ps1  cleanup-duplicate-menus.js  cleanup-profile-menu.js  create-complete-menu-data.js  debug-menu-permissions.js  docker-compose.milvus.yml  docker-compose.yml  file_structure_plan.md  fix-menu-display-issue.js  go.mod  go.sum  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  set_token.js  test-menu-permissions.js  test-permission-management.js  test-role-database-integration.js  test-user-management.js  test_frontend_api.js  test_grpc_communication.sh  test_menu_frontend.html  test_register.json  update-backend-menu-data.js  verify-infinite-render-fix.js  豆包：码道 (Code Taoist) 全栈项目详细方案文档.md
02-理论基础/: 源界生态系统指南.md
04-需求管理/: 太上系统需求管理机制.md
05-技术架构/: 资源三轴映射表.md
06-整合文档/: 03_开发规范与实施计划.md
api/: Dockerfile  Makefile  README.md  ai_grpc_client.go  ai_grpc_services.go  ai_service_pb2_grpc.py  docker-compose.yml  go.mod  go.sum  grpc_client_example.go  main.go  test_grpc_connection.go
core-services/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  api-docs.yaml  assign_admin_roles.go  check_admin_permissions.go  check_db_structure.go  check_permissions.go  check_role_permissions_table.go  check_roles_data.go  check_roles_table.go  check_user_permissions.go  check_user_roles.go  config.yaml  create_test_user.go  debug_menus.go  debug_permissions.go  debug_search.go  debug_start.go  debug_user_id.go  decode_jwt.ps1  docker-compose.yml  drop_mysql_tables.go  drop_permission_tables.go  fix-encoding.ps1  fix-imports.ps1  fix-multitenant-comments.ps1  fix-relative-imports.ps1  fix-utf8-encoding.ps1  fix-utf8.ps1  fix_admin_super_permissions.go  fix_admin_super_permissions_v2.go  fix_admin_super_permissions_v3.go  fix_get_current_user.go  go.mod  go.sum  init_roles_data.go  (+10 more)
db/: MIGRATION_GUIDE.md  flyway.conf  schema.sql
deprecated-tests/: .gitkeep  test-auth-system.js  test-menu-crud.js  test-menu-display.js  verify-menu-pages.js
desktop-apps/: README.md
desktop-apps/linux/: CMakeLists.txt  README.md  build.sh
desktop-apps/linux/.github/workflows/: linux-build.yml
desktop-apps/linux/docs/: BUILD.md
desktop-apps/linux/include/: app.h  application.h  auth_manager.h  chat_manager.h  common.h  config.h  desktop_pet.h  friend_manager.h  http_client.h  ui.h  utils.h  window_manager.h
desktop-apps/linux/include/audio/: audio_manager.h
desktop-apps/linux/include/graphics/: renderer.h
desktop-apps/linux/include/network/: api_client.h  client.h
desktop-apps/linux/include/storage/: cache.h  database.h
desktop-apps/linux/include/system/: dbus_client.h  desktop_integration.h
desktop-apps/linux/include/ui/: gtk_helpers.h  main_window.h
desktop-apps/linux/packaging/: CMakeLists.txt
desktop-apps/linux/packaging/debian/: changelog  control  postinst  postrm  prerm  rules
desktop-apps/linux/packaging/flatpak/: taishang-laojun.yml
desktop-apps/linux/packaging/rpm/: postinst.sh  postrm.sh  prerm.sh  taishang-laojun.spec
desktop-apps/linux/packaging/scripts/: build_appimage.sh  copy_dependencies.sh  verify_packages.sh
desktop-apps/linux/packaging/snap/: snapcraft.yaml
desktop-apps/linux/resources/: taishang-laojun.desktop
desktop-apps/linux/resources/appstream/: taishang-laojun.appdata.xml
desktop-apps/linux/resources/man/: taishang-laojun.1
desktop-apps/linux/scripts/: validate_build.ps1  validate_build.sh
desktop-apps/linux/src/: CMakeLists.txt  app.c  application.c  auth_manager.c  chat_manager.c  config.c  data_sync.c  desktop_pet.c  file_transfer.c  friend_manager.c  http_client.c  main.c  project_management.c  ui.c  utils.c  window_manager.c
desktop-apps/linux/src/audio/: audio_manager.c
desktop-apps/linux/src/graphics/: renderer.c
desktop-apps/linux/src/network/: api_client.c  client.c
desktop-apps/linux/src/storage/: cache.c  database.c
desktop-apps/linux/src/system/: dbus_client.c  desktop_integration.c
desktop-apps/linux/src/ui/: gtk_helpers.c  main_window.c  project_view.c
desktop-apps/linux/tests/: CMakeLists.txt  test_app.c  test_audio.h  test_config.c  test_graphics.h  test_main.c  test_network.h  test_storage.h  test_system.h  test_ui.c  test_ui.h  test_utils.c
desktop-apps/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-apps/tauri-app/src-tauri/src/: ai_service.rs  app_manager.rs  auth.rs  auth_manager.rs  chat.rs  chat_manager.rs  data_access_layer.rs  data_sync_manager.rs  database_config.rs  document.rs  file_transfer.rs  friend_manager.rs  image_generator.rs  input_optimizer.rs  main.rs  module_manager.rs  offline_manager.rs  project_manager.rs  realtime_sync.rs  security.rs  storage.rs  sync_config.rs  sync_service.rs  transfer_security.rs
desktop-apps/windows/: CMakeLists.txt
desktop-apps/windows/include/: auth_manager.h  chat_manager.h  desktop_pet.h  friend_manager.h  http_client.h  pch.h
desktop-apps/windows/resources/: app.rc  resource.h
desktop-apps/windows/src/: application.cpp  application.h  auth_manager.cpp  chat_manager.cpp  data_sync.cpp  desktop_pet.cpp  desktop_pet.h  file_transfer.cpp  file_transfer.h  friend_manager.cpp  http_client.cpp  main.cpp  pch.h  project_management.cpp
desktop-apps/windows/tests/: CMakeLists.txt  test_application.cpp  test_auth_manager.cpp  test_chat_manager.cpp  test_desktop_pet.cpp  test_file_transfer.cpp  test_http_client.cpp  test_main.cpp
docker/: Dockerfile.compliance-service  Dockerfile.core-services  Dockerfile.frontend  Dockerfile.localization-service  default.conf  docker-compose.yml  nginx.conf  prometheus.yml
docs/: ARCHITECTURE_OVERVIEW.md  README.md  architecture.md  data-model-design.md  development-guidelines.md  development-plan.md  development-process.md  development-progress-assessment.md  model-api.md  python-service-architecture.md  roadmap-deliverables.md  startup-package-checklist.md  tech-stack.md  文档持续更新机制.md  文档流程重新规划完成报告.md  文档流程重新规划方案.md  新文档架构设计方案.md  权限管理API使用指南.md  架构总览.md  (+3 more)
(+1912 files in other folders)
