[package]
name = "taishang-laojun-desktop"
version = "1.0.0"
description = "太上老君AI平台桌面应用"
authors = ["Taishang Laojun Team"]
license = "MIT"
repository = "https://github.com/taishanglaojun/taishang-laojun"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
dirs = "5.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
rsa = "0.9"
aes-gcm = "0.10"
base64 = "0.21"
sha2 = "0.10"
rand = "0.8"
mdns = "3.0"
local-ip-address = "0.5"
socket2 = "0.5"
futures = "0.3"
bytes = "1.0"
regex = "1.0"
tokio-tungstenite = "0.20"
futures-util = "0.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "taishang-laojun-desktop"
path = "src/main.rs"
